feat: add resquest validator and create new thread quickly
